Code refactor of logic.process get_range function

--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
       Largeset - Fake data generator
        </span>
        <span class="navbar-text">
-        v. 0.4.5 (alpha)
+        v. 0.4.6 (alpha)
     </span>
     </div>
   </header>
@@ -164,9 +164,9 @@
         <div class="alert alert-light border-top m-2" role="alert">
              <h4 class="alert-heading">What's new</h4>
              <ul>
-                <li>26.09.2019 - v. 0.4.3 Красивые чекбоксы, суфиксы и префиксы строковых переменных</li>
                 <li>27.09.2019 - v. 0.4.4 Фикс нулл метода, 4 новых типа данных (по параметрам CPU)</li>
                 <li>28.09.2019 - v. 0.4.5 Фиксы ui, экспорт в  JSON, новые типы данных</li>
+                <li>01.10.2019 - v. 0.4.3 Новый синтаксис арифметических операций</li>
 
              </ul>
         </div>
@@ -218,9 +218,11 @@
               <ul>
                 <li> <strong>Параметры типов полей</strong> Пишутся в формате <code>param = value;</code> Пример <code>min = 1 </code>
                      Если  типу нужен параметр - он подтянется автоматически. Параметры можно упустить.
-                <li><strong>Арифметические операции</strong> Задаются в формате - <code>lambda x: value [*, /, +, -] x</code> или <code>lambda x: x [*, /, +, -] value</code>. 
-                Пример - если нужно чтобы все значения умножались на 4 пишем <code>lambda x: x*4 </code>. Допустипо применять несколько операций в таком виде они применятся поочередно: <code> lambda x: x*4; lambda x: x+2 </code> </li> 
+                <li><strong>Арифметические операции</strong> Задаются в формате - <code>lambda [value]: [operation]</code>. По сути это анонимная функция на языке python
+                Пример - если нужно чтобы все значения умножались на 4 пишем <code>lambda x: x*4 </code>. В функциях Lambda допустиvо применение операций cos, sin, tan, sqrt
                 <li> <strong>Округление </strong><code>round = [число знаков]</code>. Пример - <code>round = 5</code></li>
+                <li>В lambda запрещено использовать циклы и условные операторы</li>
+                <li>Арифметические операции и округление применяются поочередно. Можно явно задать после какой операции выполнять округление</li>
               </ul>
           </li>
           <li>
