--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
       Largeset - Fake data generator
        </span>
        <span class="navbar-text">
-        v. 0.4.6 (alpha)
+        v. 0.4.7 (alpha)
     </span>
     </div>
   </header>
@@ -132,6 +132,7 @@
                          <select v-model="file_type" class="form-control form-control-sm" id ="formatselect">
                              <option v-bind:value="'text'">Text</option>
                              <option v-bind:value="'json'">JSON Array</option>
+                             <option v-bind:value="'dbunit'">DB_UNIT XML</option>
                         </select>
                      </div>
 
@@ -146,9 +147,13 @@
                             Add Header
                         </label>
                       </div>
-                      <label v-if= 'file_type=="json"' for="delimiterinput" >Root Element :</label>
+                      <label v-if= 'file_type=="json"' for="rootelementinput" >Root Element :</label>
                      <div class='col' v-if= 'file_type=="json"'>
-                         <input type="text"  id="delimiterinput" v-model='json_root' class='form-control'>
+                         <input type="text"  id="rootelementinput" v-model='json_root' class='form-control'>
+                     </div>
+                     <label v-if= 'file_type=="dbunit"' for="tablenameinput" >Table name:</label>
+                     <div class='col' v-if= 'file_type=="dbunit"'>
+                         <input type="text"  id="tablenameinput" v-model='table_name' class='form-control'>
                      </div>
                      
               </div>
@@ -164,9 +169,9 @@
         <div class="alert alert-light border-top m-2" role="alert">
              <h4 class="alert-heading">What's new</h4>
              <ul>
-                <li>27.09.2019 - v. 0.4.4 Фикс нулл метода, 4 новых типа данных (по параметрам CPU)</li>
                 <li>28.09.2019 - v. 0.4.5 Фиксы ui, экспорт в  JSON, новые типы данных</li>
-                <li>01.10.2019 - v. 0.4.3 Новый синтаксис арифметических операций</li>
+                <li>01.10.2019 - v. 0.4.6 Новый синтаксис арифметических операций</li>
+                <li>03.10.2019 - v. 0.4.7 DBUnit Export </li>
 
              </ul>
         </div>
@@ -263,7 +268,6 @@
 
 <modal v-if="showModal" @close="showModal = false" v-bind:items='sorted_items' v-on:sort ='filter_event' v-on:on_select='type_select_event'></modal>
 <scriptmodal v-if='showScriptModal' @close='close_scrypt_modal' v-bind:editable='current_editable_model' v-bind:items='items'></scriptmodal>
-
 </main>
 <footer class='text-center p-1'>
 <div class="alert alert-success" role="alert">
