--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
       Largeset - Fake data generator
        </span>
        <span class="navbar-text">
-        v. 0.4.7 (alpha)
+        v. 0.5.0 (alpha)
     </span>
     </div>
   </header>
@@ -166,9 +166,9 @@
         <div class="alert alert-light border-top m-2" role="alert">
              <h4 class="alert-heading">What's new</h4>
              <ul>
-                <li>28.09.2019 - v. 0.4.5 Фиксы ui, экспорт в  JSON, новые типы данных</li>
                 <li>01.10.2019 - v. 0.4.6 Новый синтаксис арифметических операций</li>
                 <li>03.10.2019 - v. 0.4.7 DBUnit Export </li>
+                <li>14.09.2019 - v. 0.5.0 Save/load schema feature</li>
 
              </ul>
         </div>
